easygui 0.97 and sphinx sources
Copied files from my easygui repository to Al's.  Al, I very likely got
something incorrect.  Please let me know how I can help.

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -6,6 +6,7 @@ SPHINXOPTS    =
 SPHINXBUILD   = sphinx-build
 PAPER         =
 BUILDDIR      = _build
+HTMLBUILDDIR  = ../documentation
 
 # User-friendly check for sphinx-build
 ifeq ($(shell which $(SPHINXBUILD) >/dev/null 2>&1; echo $$?), 1)
@@ -48,11 +49,12 @@ help:
 
 clean:
 	rm -rf $(BUILDDIR)/*
+  rm -rf $(HTMLBUILDDIR)/*
 
 html:
-	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
+	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(HTMLBUILDDIR)/html
 	@echo
-	@echo "Build finished. The HTML pages are in $(BUILDDIR)/html."
+	@echo "Build finished. The HTML pages are in $(HTMLBUILDDIR)/html."
 
 dirhtml:
 	$(SPHINXBUILD) -b dirhtml $(ALLSPHINXOPTS) $(BUILDDIR)/dirhtml
@@ -85,17 +87,17 @@ qthelp:
 	@echo
 	@echo "Build finished; now you can run "qcollectiongenerator" with the" \
 	      ".qhcp project file in $(BUILDDIR)/qthelp, like this:"
-	@echo "# qcollectiongenerator $(BUILDDIR)/qthelp/EasyGui.qhcp"
+	@echo "# qcollectiongenerator $(BUILDDIR)/qthelp/easygui.qhcp"
 	@echo "To view the help file:"
-	@echo "# assistant -collectionFile $(BUILDDIR)/qthelp/EasyGui.qhc"
+	@echo "# assistant -collectionFile $(BUILDDIR)/qthelp/easygui.qhc"
 
 devhelp:
 	$(SPHINXBUILD) -b devhelp $(ALLSPHINXOPTS) $(BUILDDIR)/devhelp
 	@echo
 	@echo "Build finished."
 	@echo "To view the help file:"
-	@echo "# mkdir -p $$HOME/.local/share/devhelp/EasyGui"
-	@echo "# ln -s $(BUILDDIR)/devhelp $$HOME/.local/share/devhelp/EasyGui"
+	@echo "# mkdir -p $$HOME/.local/share/devhelp/easygui"
+	@echo "# ln -s $(BUILDDIR)/devhelp $$HOME/.local/share/devhelp/easygui"
 	@echo "# devhelp"
 
 epub:
